manifests/media/jellyseerr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cert-manager
  hostnames:
    - overseerr.cluster.nelsondane.com
    - overseerr.nelsondane.com
    - family.nelsondane.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyseerr
          port: 5055
